bas-io: Add ProcessWrapper and builders.